# rag-chunking-challenge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
data/: prepare_data.py
data/processed/: arxiv_paper.txt  tesla_10k_2024.txt
data/raw/: tesla_10K.html
migrations/: env.py  script.py.mako
migrations/versions/: 2025_11_09_1654-5a0cd9d67410_enable_pgvector.py  2025_11_09_1820-f4eea76f3a05_create_document_chunks_table.py
src/: database.py  main.py  queries.json  settings.py
src/chunkers/: base.py  fixed.py  naive_chunker.py  semantic.py  sentence.py
src/evaluation/: queries.json  run_baseline.py
src/models/: __init__.py  document_chunk.py
src/services/: retrieval.py  seed_embeddings.py
