[tool.poetry]
name = "rag-chunking-challenge"
version = "0.1.0"
description = ""
authors = ["Crisa Gazzola <crisagazzola@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.121.1"
uvicorn = "^0.38.0"
sentence-transformers = "^5.1.2"
qdrant-client = "^1.15.1"
tiktoken = "^0.12.0"
openai = "^2.7.1"
pdfplumber = "^0.11.8"
beautifulsoup4 = "^4.14.2"
lxml = "^6.0.2"
pymupdf = "^1.26.6"
alembic = "^1.17.1"
sqlalchemy = "^2"
psycopg = {extras = ["binary"], version = "^3.2.12"}
loguru = "^0.7.3"
pgvector = "^0.4.1"
pydantic-settings = "^2.11.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
black = "^25.9.0"
isort = "^7.0.0"
mypy = "^1.18.2"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
